--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	
-	<h1>Demo project git and github</h1>
+	<h1 class="heading">Demo project git and github</h1>
 
 	<script src="lab2.js"></script>
 </body>
