--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	
-	<h1 class="heading">Demo project git and github</h1>
-	<li class="list-item">home</li>
+	<!-- <h1 class="heading">Demo project git and github</h1>
+	<li class="list-item">home</li> -->
 
 	<script src="lab2.js"></script>
 </body>
